renamed the project

--- a/DalamundBoombox/DalamundBoombox.csproj
+++ b/DalamundBoombox/DalamundBoombox.csproj
@@ -6,9 +6,9 @@
     <Authors></Authors>
     <Company></Company>
     <Version>0.0.0.1</Version>
-    <Description>A sample plugin.</Description>
+    <Description>A Dalamund Boombox plugin for FFXIV.</Description>
     <Copyright></Copyright>
-    <PackageProjectUrl>https://github.com/goatcorp/SamplePlugin</PackageProjectUrl>
+    <PackageProjectUrl>https://github.com/knomad/DalamundBoombox</PackageProjectUrl>
     <PackageLicenseExpression>AGPL-3.0-or-later</PackageLicenseExpression>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
